# chatbot-emporio-musica

./: .env.example  .gitignore  README.md  pyproject.toml
conversas/: 01-catalogo-por-preco.md  02-informacoes-da-loja.md  03-consulta-de-preco.md  04-politica-de-devolucao.md  05-memoria-multi-turno.md
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  core.py  llm_client.py
src/cli/: __init__.py  interface.py
src/memory/: conversation_history.py  json_history_store.py
src/rag/: __init__.py  chroma.py  in_memory.py  indexer.py  pdf_indexer.py  retriever.py  vector_store.py
src/tabular_data/: pandas_service.py  schema.py  service.py
src/tools/: __init__.py  base.py  catalog_tools.py  policy_tools.py
src/utils/: logger.py
tests/: test_agent_core.py  test_memory.py  test_placeholder.py  test_policy_tools.py  test_rag.py  test_tabular_data.py  test_tools.py
